[tool.poetry]
name = "medium-api"
version = "0.0.1a"
description = "Async-Python Unofficial Medium API"
authors = ["Andrew Rainboldt <arainboldt@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "medium_api"}]

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^5.6.0"
async-mixin = {git = "git@github.com:arainboldt/async_mixin.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
